crear nuevas imagenes  e instalacion de libreria de javascript
instalacion de libreria thesportdb

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ $(window).load(function(){
 <![endif]-->
 </head>
 <body>
+  <div>
+    <h1> Pagina Fitnees</h1>
+  </div>
 <div class="main">
   <div class="bg-img"></div>
   <!--==============================header=================================-->
@@ -63,24 +66,18 @@ $(window).load(function(){
       <div class="grid_12">
         <div class="slider">
           <ul class="items">
-            <li><img src="images/slider-1.jpg" alt="">
+            <li><img src="./images/slider-4.jpg" alt="">
               <div class="banner">
                 <p class="font-1">Special<span>Program</span></p>
                 <p class="font-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna.</p>
                 <a href="#">Read More</a> </div>
             </li>
-            <li><img src="images/slider-2.jpg" alt="">
+            <li><img src="./images/slider-5.jpg" alt="">
               <div class="banner">
                 <p class="font-1">Get Free<span>Training</span></p>
                 <p class="font-2">Liquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
                 <a href="#">Read More</a> </div>
-            </li>
-            <li><img src="images/slider-3.jpg" alt="">
-              <div class="banner">
-                <p class="font-1">Join<span>our team</span></p>
-                <p class="font-2">Liquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
-                <a href="#">Read More</a> </div>
-            </li>
+            </li>                     
           </ul>
           <div class="pagination">
             <ul>
