--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Fitness Club</title>
+<title></title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -41,13 +41,13 @@ $(window).load(function(){
 </head>
 <body>
   <div>
-    <h1> Pagina Fitnees</h1>
+    <h1> Liga Profesional De Beisbol De Venezuela</h1>
   </div>
 <div class="main">
   <div class="bg-img"></div>
   <!--==============================header=================================-->
   <header>
-    <h1><a href="index.html">Fitness <strong>Club.</strong></a></h1>
+    <h1><a href="index.html">LVBP <strong></strong></a></h1>
     <nav>
       <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
       <ul class="menu">
