--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(window).load(function(){
   <div class="bg-img"></div>
   <!--==============================header=================================-->
   <header>
-    <h1><a href="index.html">LVBP <strong></strong></a></h1>
+    <h1 id="name"><a href="index.html">LVBP <strong></strong></a></h1>
     <nav>
       <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
       <ul class="menu">
@@ -65,7 +65,7 @@ $(window).load(function(){
       <div class="grid_12">
         <div class="slider">
           <ul class="items">
-            <li><img src="./images/slider-4.jpg" alt="">
+            <li id="image1"><img src="./images/slider-4.jpg" alt="">
               <div class="banner">
                 <p class="font-1">Special<span>Program</span></p>
                 <p class="font-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna.</p>
@@ -97,7 +97,8 @@ $(window).load(function(){
           <div class="wrap block-2">
             <div class="col-1">
               <h2 class="p3"><span class="color-1">Latest</span> events</h2>
-              <div class="wrap box-1"> <img src="images/page1-img1.jpg" alt="" class="img-border img-indent">
+              <div  class="wrap box-1"> <img id="img1" src="images/page1-img1.jpg" alt="" class="img-border img-indent">
+
                 <div class="extra-wrap">
                   <p class="p2"><strong>Ut wisi enim ad minim veniamis nostrud</strong> </p>
                   <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.</p>
