equipos liga venezolana beisbol
Aguilas del zulia leones del caracas

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(window).load(function(){
   <div class="bg-img"></div>
   <!--==============================header=================================-->
   <header>
-    <h1 id="name"><a href="index.html">LVBP <strong></strong></a></h1>
+    <h1 id="name" width ="150"><a href="index.html"><strong></strong></a></h1>
     <nav>
       <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
       <ul class="menu">
@@ -89,7 +89,7 @@ $(window).load(function(){
       </div>
       <div class="grid_12 top-1">
         <div class="block-1 box-shadow">
-          <p class="font-3">Fitness Club is one of free website templates created by TemplateMonster. This website template is optimized for 1280X1024 screen resolution. This Fitness Club Template goes with 2 packages – with PSD source files and without them. PSD source files are available for free for the registered members of TemplateMonster.com.</p>
+          <p id="description" class="font-3">Fitness Club is one of free website templates created by TemplateMonster. This website template is optimized for 1280X1024 screen resolution. This Fitness Club Template goes with 2 packages – with PSD source files and without them. PSD source files are available for free for the registered members of TemplateMonster.com.</p>
         </div>
       </div>
       <div class="grid_12 top-1">
@@ -97,17 +97,17 @@ $(window).load(function(){
           <div class="wrap block-2">
             <div class="col-1">
               <h2 class="p3"><span class="color-1">Latest</span> events</h2>
-              <div  class="wrap box-1"> <img id="img1" src="images/page1-img1.jpg" alt="" class="img-border img-indent">
+              <div  class="wrap box-1"> <img width="250" id="img1" src="images/page1-img1.jpg" alt="" class="img-border img-indent">
 
                 <div class="extra-wrap">
-                  <p class="p2"><strong>Ut wisi enim ad minim veniamis nostrud</strong> </p>
-                  <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.</p>
+                  <p id="aguilas" class="p2"><strong>Ut wisi enim ad minim veniamis nostrud</strong> </p>
+                  <p id="aguilas1">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.</p>
                 </div>
               </div>
-              <div class="wrap box-1 top-2"> <img src="images/page1-img2.jpg" alt="" class="img-border img-indent">
+              <div class="wrap box-1 top-2"> <img width="250" id="img2" src="images/page1-img2.jpg" alt="" class="img-border img-indent">
                 <div class="extra-wrap">
-                  <p><strong>Duis autem vel eum iriure dolor</strong></p>
-                  <p>Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilis lorem ipsum dolor.</p>
+                  <p id ="leones"><strong>Duis autem vel eum iriure dolor</strong></p>
+                  <p id="leones1">Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilis lorem ipsum dolor.</p>
                 </div>
               </div>
             </div>
