--- a/index.html
+++ b/index.html
@@ -65,18 +65,21 @@ $(window).load(function(){
       <div class="grid_12">
         <div class="slider">
           <ul class="items">
-            <li id="image1"><img src="./images/slider-4.jpg" alt="">
+            <li id="primer-elemento-carrusel"><img src="./images/slider-4.jpg" alt="">
               <div class="banner">
                 <p class="font-1">Special<span>Program</span></p>
                 <p class="font-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna.</p>
-                <a href="#">Read More</a> </div>
             </li>
-            <li><img src="./images/slider-5.jpg" alt="">
+            <li id = "segundo-elemento-carrusel"><img src="./images/slider-5.jpg" alt="">
               <div class="banner">
                 <p class="font-1">Get Free<span>Training</span></p>
                 <p class="font-2">Liquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
-                <a href="#">Read More</a> </div>
-            </li>                     
+            </li>  
+            <li id = "tercerElementoCarrusel"><img src="./images/slider-5.jpg" alt="">
+              <div class="banner">
+                <p class="font-1">Carepipe<span>Training</span></p>
+                <p class="font-2">Liquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+            </li>                
           </ul>
           <div class="pagination">
             <ul>
