--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@ $(window).load(function(){
     <nav>
       <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
       <ul class="menu">
-        <li class="current"><a href="index.html">About</a></li>
-        <li><a href="trainings.html">Trainings</a></li>
-        <li><a href="timetable.html">Timetable</a></li>
+        <li class="current"><a href="index.html">Baseball</a></li>
+        <li><a href="trainings.html">Soccer</a></li>
+       <!-- <li><a href="timetable.html">Timetable</a></li>
         <li><a href="nutrition.html">Nutrition</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contacts.html">Contacts</a></li>
+        <li><a href="contacts.html">Contacts</a></li>-->
+        
       </ul>
     </nav>
   </header>
@@ -82,6 +83,7 @@ $(window).load(function(){
             </li>                
           </ul>
           <div class="pagination">
+
             <ul>
               <li><a href="#"></a></li>
               <li><a href="#"></a></li>
@@ -99,7 +101,7 @@ $(window).load(function(){
         <div class="box-shadow">
           <div class="wrap block-2">
             <div class="col-1">
-              <h2 class="p3"><span class="color-1">Latest</span> events</h2>
+              <h2 class="p3"><span class="color-1">Important</span> Teams</h2>
               <div  class="wrap box-1"> <img width="250" id="img1" src="images/page1-img1.jpg" alt="" class="img-border img-indent">
 
                 <div class="extra-wrap">
@@ -114,7 +116,7 @@ $(window).load(function(){
                 </div>
               </div>
             </div>
-            <div class="col-2">
+          <!-- <div class="col-2">
               <h2 class="p3"><span class="color-1">Services</span> list</h2>
               <ul class="list-1">
                 <li><a href="#">Lorem ipsum dolor sit amet</a></li>
@@ -129,7 +131,7 @@ $(window).load(function(){
                   <input type="text" value="Enter your Zip" onBlur="if(this.value=='') this.value='Enter your Zip'" onFocus="if(this.value =='Enter your Zip' ) this.value=''"  />
                   <a href="#" class="search_button">Search</a>
                 </form>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
