--- a/trainings.html
+++ b/trainings.html
@@ -24,16 +24,16 @@
   <div class="bg-img"></div>
   <!--==============================header=================================-->
   <header>
-    <h1><a href="index.html">Fitness <strong>Club.</strong></a></h1>
+    <h1><a href="index.html">Liga <strong>Soccer</strong></a></h1>
     <nav>
       <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
       <ul class="menu">
-        <li><a href="index.html">About</a></li>
-        <li class="current"><a href="trainings.html">Trainings</a></li>
-        <li><a href="timetable.html">Timetable</a></li>
+        <li><a href="index.html">Baseball</a></li>
+        <li class="current"><a href="trainings.html">Soccer</a></li>
+        <!--<li><a href="timetable.html">Timetable</a></li>
         <li><a href="nutrition.html">Nutrition</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contacts.html">Contacts</a></li>
+        <li><a href="contacts.html">Contacts</a></li>-->
       </ul>
     </nav>
   </header>
@@ -44,7 +44,7 @@
         <div class="box-shadow">
           <div class="wrap block-2">
             <div class="col-3">
-              <h2 class="p3"><span class="color-1">Main</span> programs</h2>
+             <!--- <h2 class="p3"><span class="color-1">Main</span> programs</h2>
               <p class="p2"><strong>Nam liber tempor cum soluta nobis eleifend</strong></p>
               <p class="p4">Option congue nihil imperdiet doming id quod mazim placerat facer possim assum:</p>
               <ul class="list-2 p5">
@@ -55,21 +55,21 @@
                 <li><a href="#">Dolore magna aliquamerat</a></li>
               </ul>
               <p>Ut wisi enim adminim veniam quis nostrud exerci tation ullamcorper suscipit lobortis nisl.</p>
-              <a href="#" class="button top-3">Read more</a> </div>
+              <a href="#" class="button top-3">Read more</a> </div>-->
             <div class="col-4">
-              <h2 class="p3"><span class="color-1">Our</span> training</h2>
-              <p class="p2"><strong>Nam liber tempor cum soluta nobis eleifend option congue nihil</strong></p>
-              <p>Imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>
-              <div class="wrap box-1 top-4"> <img src="images/page2-img1.jpg" alt="" class="img-border img-indent">
+              <h2 class="p3"><span class="color-1">Liga</span> Venezolana</h2>
+              <p id="liga_venezolana" class="p2"><strong>Nam liber tempor cum soluta nobis eleifend option congue nihil</strong></p>
+              <!--<p>Imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod.</p>-->
+              <div class="wrap box-1 top-4"> <img id="primer_equipo" width="150"  src="images/page2-img1.jpg" alt="" class="img-border img-indent">
                 <div class="extra-wrap">
-                  <p class="p2"><strong>Duis autem vel eum iriure dolor</strong></p>
-                  <p>Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilis lorem ipsum dolor.</p>
+                  <p id="parrafo_primer_equipo" class="p2"><strong>Duis autem vel eum iriure dolor</strong></p>
+                  <p id = "parrafo_dos_primer_equipo" >Hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilis lorem ipsum dolor.</p>
                 </div>
               </div>
-              <div class="wrap box-1 top-2"> <img src="images/page2-img2.jpg" alt="" class="img-border img-indent">
+              <div class="wrap box-1 top-2"> <img id="segundo_equipo" width="150"  src="images/page2-img2.jpg" alt="" class="img-border img-indent">
                 <div class="extra-wrap">
-                  <p class="p2"><strong>Ut wisi enim ad minim veniamis nostrud</strong></p>
-                  <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.</p>
+                  <p id="parrafo_segundo_equipo" class="p2"><strong>Ut wisi enim ad minim veniamis nostrud</strong></p>
+                  <p id="parrafo_dos_segundo_equipo">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim.</p>
                 </div>
               </div>
             </div>
@@ -81,10 +81,11 @@
   </section>
   <!--==============================footer=================================-->
   <footer>
-    <p>© 2012 Fitness Club</p>
-    <p>Website Template by <a target="_blank" href="http://www.templatemonster.com/" class="link">TemplateMonster.com</a></p>
+    <p>2023 Liga Venezolana</p>
+   <!-- <p>Website Template by <a target="_blank" href="http://www.templatemonster.com/" class="link">TemplateMonster.com</a></p>-->
   </footer>
 </div>
+<script src="./js/training.js"></script>
 <script>Cufon.now();</script>
 </body>
 </html>
