--- a/index.html
+++ b/index.html
@@ -46,17 +46,20 @@ $(window).load(function(){
   <div class="bg-img"></div>
   <!--==============================header=================================-->
   <header>
+    <div>
+      <img id ="icono_beisbol" width="100">
+    </div>
     <h1 id="name" width ="150"><a href="index.html"><strong></strong></a></h1>
     <nav>
       <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
       <ul class="menu">
-        <li class="current"><a href="index.html">Baseball</a></li>
+        <li  class="current"><a href="index.html">Baseball</a></li>
         <li><a href="trainings.html">Soccer</a></li>
        <!-- <li><a href="timetable.html">Timetable</a></li>
         <li><a href="nutrition.html">Nutrition</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contacts.html">Contacts</a></li>-->
-        
+
       </ul>
     </nav>
   </header>
@@ -68,8 +71,8 @@ $(window).load(function(){
           <ul class="items">
             <li><img id="primer-elemento-carrusel" src="./images/slider-4.jpg" alt="">
               <div class="banner">
-                <p class="font-1">Special<span>Program</span></p>
-                <p class="font-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna.</p>
+                <p class="font-1">Venezuelan<span>League</span></p>
+                <p class="font-2">the appearance of professional baseball in Venezuela attracted many ball players from the Caribbean and the United States to the country, showing a more integrated sport there than it was in the United States. </p>
             </li>
             <li ><img id ="segundo-elemento-carrusel" src="./images/slider-5.jpg" alt="">
               <div class="banner">
@@ -142,8 +145,8 @@ $(window).load(function(){
   </section>
   <!--==============================footer=================================-->
   <footer>
-    <p>© 2012 Fitness Club</p>
-    <p>Website Template by <a target="_blank" href="http://www.templatemonster.com/" class="link">TemplateMonster.com</a></p>
+    <p>2023 Liga Venezolana</p>
+   <!-- <p>Website Template by <a target="_blank" href="http://www.templatemonster.com/" class="link">TemplateMonster.com</a></p>-->
   </footer>
 </div>
 <script>Cufon.now();</script>
