--- a/trainings.html
+++ b/trainings.html
@@ -24,8 +24,11 @@
   <div class="bg-img"></div>
   <!--==============================header=================================-->
   <header>
+    <div >
+      <img id="logo_soccer" width="250" height="100">
+    </div>
     <h1><a href="index.html">Liga <strong>Soccer</strong></a></h1>
-    <nav>
+     <nav>
       <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
       <ul class="menu">
         <li><a href="index.html">Baseball</a></li>
@@ -36,6 +39,7 @@
         <li><a href="contacts.html">Contacts</a></li>-->
       </ul>
     </nav>
+    
   </header>
   <!--==============================content================================-->
   <section id="content">
