arreglo imagenes carrousel
imagenes carrousel

--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@ $(window).load(function(){
       <div class="grid_12">
         <div class="slider">
           <ul class="items">
-            <li><img id="primer-elemento-carrusel" src="./images/slider-4.jpg" alt="">
+            <li><img id="primer-elemento-carrusel" width="100" src="./images/slider-6.jpg"  alt="">
               <div class="banner">
                 <p class="font-1">Venezuelan<span>League</span></p>
                 <p class="font-2">the appearance of professional baseball in Venezuela attracted many ball players from the Caribbean and the United States to the country, showing a more integrated sport there than it was in the United States. </p>
             </li>
-            <li ><img id ="segundo-elemento-carrusel" src="./images/slider-5.jpg" alt="">
+            <li ><img id ="segundo-elemento-carrusel" width="100"  src="./images/slider-7.jpg"  alt="">
               <div class="banner">
-                <p class="font-1">Get Free<span>Training</span></p>
-                <p class="font-2">Liquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+                <p class="font-1"><span>Teams</span></p>
+                <p class="font-2">The Águilas del Zulia,Bravos de Margarita,Cardenales de Lara,Caribes de Anzoátegui,Leones del Caracas,Navegantes del Magallanes,Tiburones de La Guaira,Tigres de Aragua.</p>
             </li>  
-            <li><img id ="tercer-elemento-carrusel" src="./images/slider-5.jpg" alt="">
+            <li><img id ="tercer-elemento-carrusel" width="100"  src="./images/slider-8.jpg"  alt="">
               <div class="banner">
-                <p class="font-1"><span>Training</span></p>
-                <p class="font-2">Liquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+                <p class="font-1"><span>Stadiums</span></p>
+                <p class="font-2">Stadium Luis Aparicio El Grande, Nueva Esparta,Antonio Herrera Gutiérrez,Alfonso Chico Carrasquel,Estadio Universitario,Estadio José Bernardo Pérez,Estadio Fórum La Guaira,Estadio José Pérez Colmenares.</p>
             </li>                
           </ul>
           <div class="pagination">
@@ -145,6 +145,7 @@ $(window).load(function(){
   </section>
   <!--==============================footer=================================-->
   <footer>
+    @RamonLopezB
     <p>2023 Liga Venezolana</p>
    <!-- <p>Website Template by <a target="_blank" href="http://www.templatemonster.com/" class="link">TemplateMonster.com</a></p>-->
   </footer>
