--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title></title>
+<title>League de Base Ball And Soccer in Venezuela</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -51,7 +51,7 @@ $(window).load(function(){
     </div>
     <h1 id="name" width ="150"><a href="index.html"><strong></strong></a></h1>
     <nav>
-      <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>
+     <!-- <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>-->
       <ul class="menu">
         <li  class="current"><a href="index.html">Baseball</a></li>
         <li><a href="trainings.html">Soccer</a></li>
@@ -77,12 +77,12 @@ $(window).load(function(){
             <li ><img id ="segundo-elemento-carrusel" width="100"  src="./images/slider-7.jpg"  alt="">
               <div class="banner">
                 <p class="font-1"><span>Teams</span></p>
-                <p class="font-2">The Águilas del Zulia,Bravos de Margarita,Cardenales de Lara,Caribes de Anzoátegui,Leones del Caracas,Navegantes del Magallanes,Tiburones de La Guaira,Tigres de Aragua.</p>
+                <p class="font-2">The Aguilas del Zulia,Bravos de Margarita,Cardenales de Lara,Caribes de Anzoátegui,Leones del Caracas,Navegantes del Magallanes,Tiburones de La Guaira,Tigres de Aragua.</p>
             </li>  
             <li><img id ="tercer-elemento-carrusel" width="100"  src="./images/slider-8.jpg"  alt="">
               <div class="banner">
                 <p class="font-1"><span>Stadiums</span></p>
-                <p class="font-2">Stadium Luis Aparicio El Grande, Nueva Esparta,Antonio Herrera Gutiérrez,Alfonso Chico Carrasquel,Estadio Universitario,Estadio José Bernardo Pérez,Estadio Fórum La Guaira,Estadio José Pérez Colmenares.</p>
+                <p class="font-2">Stadium Luis Aparicio El Grande, Nueva Esparta,Antonio Herrera Gutiérrez,Alfonso Chico Carrasquel,Estadio Universitario,Estadio Jose Bernardo Perez,Estadio Forum La Guaira,Estadio Jose Perez Colmenares.</p>
             </li>                
           </ul>
           <div class="pagination">
@@ -146,7 +146,7 @@ $(window).load(function(){
   <!--==============================footer=================================-->
   <footer>
     @RamonLopezB
-    <p>2023 Liga Venezolana</p>
+    <p>Octubre 2023</p>
    <!-- <p>Website Template by <a target="_blank" href="http://www.templatemonster.com/" class="link">TemplateMonster.com</a></p>-->
   </footer>
 </div>
