--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@ $(window).load(function(){
      <!-- <div class="social-icons"> <a href="#" class="icon-2"></a> <a href="#" class="icon-1"></a> </div>-->
       <ul class="menu">
         <li  class="current"><a href="index.html">Baseball</a></li>
-        <li><a href="trainings.html">Soccer</a></li>
+        <li><a href="soccer.html">Soccer</a></li>
        <!-- <li><a href="timetable.html">Timetable</a></li>
         <li><a href="nutrition.html">Nutrition</a></li>
         <li><a href="gallery.html">Gallery</a></li>
